@@ -9,6 +9,11 @@
 			"url": "http://cast.ptt.cc:8000/yes"
 		},
 		{
+			"title": "PTT Radio - OnlyMayDay",
+			"type": "mp3",
+			"url": "http://cast.ptt.cc:8000/wow"
+		},
+		{
 			"title": "Pinewave Radio - 中央大學松濤電台",
 			"type": "mp3",
 			"url": "http://broadcast.pinewave.tw:8000"
