@@ -1,6 +1,7 @@
 2010-12-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* utils/academic.json: Add THBS.
+	* utils/academic.json: Add OnlyMayDay.
 
 2010-11-19  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
